--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "json-server-api",
     "version": "1.0.0",
     "scripts": {
-      "start": "json-server --watch db.json --port 3001 --host 0.0.0.0"
+      "start": "json-server --watch db.json --port 3001 --host 0.0.0.0 --no-cors"
     },
     "dependencies": {
       "json-server": "^0.17.0"
